--- a/index.html
+++ b/index.html
@@ -166,10 +166,12 @@
     <div class="mb-4 bg-primary-50 p-4 rounded-md">
     <p class="text-sm font-medium text-gray-700 mb-2">供灯功德：光明，智慧圆满、永断无明</p>
         <div>
-            <p class="text-sm font-semibold">葫芦灯：RM150 / 一盏 (个人名字/合家)</p>
+                        <p class="text-sm font-semibold">点灯：RM10 / 一盏（个人名字）</p>
+
         </div>
         <div>
-            <p class="text-sm font-semibold">点灯：RM10 / 一盏（个人名字）</p>
+                        <p class="text-sm font-semibold">葫芦灯：RM150 / 一盏 (个人名字/合家)</p>
+
         </div>
 </div>
 
@@ -272,8 +274,8 @@
 
     <!-- Rest of your JavaScript remains the same -->
     <script>
-    const API_ENDPOINT = 'https://script.google.com/macros/s/AKfycbycHQ5is0mXOfZgoL_3G8nLaqc8hDAtaSYRIHN0a31hqTST15fVstlvjPxEKeIYLboq/exec';
-
+    const API_ENDPOINT = 'https://script.google.com/macros/s/AKfycbxKRwCD6fJCrFofPRx6tMOQ8dpmBLHwWh3ojA29paW0_gva4QwFtkPG12367djBxeFg/exec'
+        
     document.addEventListener('DOMContentLoaded', () => {
         // DOM elements
         const lampTypeCheckboxes = document.querySelectorAll('input[name="lampTypeCheckbox"]');
