--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
         <div class="bg-primary-50 p-4 rounded-md mb-6 text-center">
             <h3 class="text-lg font-semibold text-gray-700 mb-2">主办单位</h3>
             <div class="flex justify-center items-start gap-2 mb-1">
-                <p class="text-sm text-gray-700">槟城国际禅修中心 (Penang International Meditation Center)</p>
+                <p class="text-sm text-gray-700">槟城国际禅修中心</p>
             </div>
             <p class="text-sm text-gray-700">41, Persiaran Tanjung Bunga 3, Tanjung Bungah, 11200 Penang, Malaysia.</p>
             <div class="flex justify-center items-center gap-2 mt-2">
-                <p class="text-sm text-gray-700">询问窗口 (Contact): 012-6616325</p>
+                <p class="text-sm text-gray-700">询问窗口 (Contact): 012-TBC</p>
             </div>
         </div>
             
@@ -129,7 +129,7 @@
                     <p class="text-xs text-gray-500 mb-1">请填写有效联络电话（无需空格或"-")</p>
                     <input type="tel" id="whatsapp" name="whatsapp" required
                            class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-primary-500 focus:border-primary-500 sm:text-sm"
-                           placeholder="例如：0123456789 或 +60123456789"
+                           placeholder="例如：0123456789"
                            oninput="formatPhoneNumber(this)">
                     <div id="whatsappError" class="error-message hidden"></div>
                 </div>
